# Custom-Distributed-Machine-Learning-Framework

./: CMakeLists.txt  CMakeLists.txt.alt  CMakeLists.txt.new  CMakeLists.txt.original  README.md  benchmark_model_parallel_results.csv  benchmark_parallel_results.csv  data_loader_497520.err  data_loader_497882.out  data_loader_497887.err  environment.yml  environment.yml.backup  err.txt  requirements.txt  run_benchmark.sh  setup_env.sh  setup_path.sh  test_data_loader_497269.out  test_data_loader_497275.err  test_data_loader_497281.err  test_data_loader_minimal.py  test_data_verification.py  test_model.cmake  test_model.cpp  test_threaded_loader.py
benchmarks/: benchmark_full.py  benchmark_stage1.py  benchmark_stage2.py  benchmark_stage3.py  run_benchmarks.py  run_model_parallel_benchmark.py  run_parallel_benchmark.py  train_custom.py
benchmarks/pytorch_ddp/: train_pytorch.py  train_pytorch_ddp.py
docs/: BENCHMARKING.md  PROJECT_STRUCTURE.md  README.md  error.txt  file_structure.md  hints.md  implementation_plan.md  main_implementation_plan.md
logs/: benchmark_504906.out  benchmark_505305.err  benchmark_505308.err  data_loader_497515.err  data_loader_497518.err  data_loader_497520.out  data_loader_497535.err  data_loader_497535.out  data_loader_497882.err  data_loader_497887.out  test_data_loader_497279.out  test_data_loader_502202.err  test_data_loader_502206.err  test_data_loader_502215.err  test_data_loader_502217.err  test_data_loader_502217.out
python/: simple_mpi_fix.py  simple_mpi_test.py  test_alt_mpi.py  test_data_loader.py  test_gradient_sync.py  test_mpi.py  test_mpi_sync.py  train.py  train_distributed.py
results/: benchmark_results_20250423_120722.json  benchmark_results_20250423_120948.json
scripts/: build.sh  build_alt_impl.sh  build_dataloader_only.sh  build_mpi.sh  build_with_py310.sh  collect_results_.sh  collect_results_504887.sh  collect_results_504906.sh  collect_results_504962.sh  collect_results_505305.sh  collect_results_505308.sh  conda_test.sh  create_py310_env.sh  find_py310.sh  fix_build.sh  fix_cmake_build.sh  launch.slurm  launch_benchmarks.slurm  rebuild_and_test.sh  rebuild_mpi.sh  run.sh  run_all.sh  run_mpi_test.sh  run_test.sh  setup.py.in  simple_build.sh  test_gradient_sync.slurm  test_mpi_gradient_sync.sh  test_mpi_sync.sh  test_mpi_sync.slurm  test_simple_fix.sh  test_with_py310.sh  use_apc_proj.sh  use_py310.sh  verify_numpy.sh
src/data_loader/: DataLoader.cpp  DataLoader.h  bindings.cpp
src/model/: CMakeLists.txt  Model.cpp  Model.cu  Model.h  bindings.cpp  cuda_kernels.cu  cuda_kernels.cuh  gradient_sync_bindings.cpp  test_gradient_sync.cu
src/mpi/: CMakeLists.txt  gradient_sync.c  gradient_sync.h  mpi_wrapper.cpp  mpi_wrapper_alt.cpp
test/: test_model.cpp
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
test_dir/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_model  test_model.cpp
